--- a/index.html
+++ b/index.html
@@ -30,19 +30,21 @@
                         <div id="photo"><img src="./pictures/shop/surfboard_illustration.jpg" height=100 width=auto></div>
                         <div id="name"><p>Lib Tech</p></div>
                         <div id="type">
-                            <p>Type: Shortboard</p>
+                            <p>Type:</p>
+                            <p>Shortboard</p>
                         </div>  
                         <div id="info">
                             <p>Length: 188 cm</p>
                             <p>Width: 48 cm</p>
                             <p>Thickness: 6 cm</p>
                         </div>
-                      </div>
-                      <div class="flex-container">
+                    </div>
+                    <div class="flex-container">
                         <div id="photo"><img src="./pictures/shop/surfboard_illustration.jpg" height=100 width=auto></div>
                         <div id="name"><p>Dakine</p></div>
                         <div id="type">
-                            <p>Type: Funboard</p>
+                            <p>Type:</p>
+                            <p>Funboard</p>
                         </div>  
                         <div id="info">
                             <p>Length: 230 cm</p>
@@ -54,7 +56,8 @@
                         <div id="photo"><img src="./pictures/shop/surfboard_illustration.jpg" height=100 width=auto></div>
                         <div id="name"><p>Bic</p></div>
                         <div id="type">
-                            <p>Type: Longboard</p>
+                            <p>Type:</p>
+                            <p>Longboard</p>
                         </div>  
                         <div id="info">
                             <p>Length: 302 cm</p>
@@ -66,7 +69,8 @@
                         <div id="photo"><img src="./pictures/shop/surfboard_illustration.jpg" height=100 width=auto></div>
                         <div id="name"><p>Mistral</p></div>
                         <div id="type">
-                            <p>Type: Windsurf</p>
+                            <p>Type:</p>
+                            <p>Windsurf</p>
                         </div>  
                         <div id="info">
                             <p>Length: 319 cm</p>
@@ -78,7 +82,8 @@
                         <div id="photo"><img src="./pictures/shop/surfboard_illustration.jpg" height=100 width=auto></div>
                         <div id="name"><p>Fanatic</p></div>
                         <div id="type">
-                            <p>Type: Windsurf</p>
+                            <p>Type:</p>
+                            <p>Windsurf</p>
                         </div>  
                         <div id="info">
                             <p>Length: 269 cm</p>
